ucc constructor & lib_init
    Constructor: detect plugin path, dlopen all available
    plugins (coll components)
    Lib_init: create lib object and fill with plugins based on filtering

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,21 +2,34 @@
 # Copyright (C) Mellanox Technologies Ltd. 2020.  ALL RIGHTS RESERVED.
 #
 
+SUBDIRS = core
+
 lib_LTLIBRARIES  = libucc.la
 noinst_LIBRARIES =
 
 libucc_la_CPPFLAGS = $(AM_CPPFLAGS)
+
 libucc_la_CFLAGS   = -c
-libucc_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed 
+libucc_la_LDFLAGS  = -ldl -version-info $(SOVERSION) --as-needed 
 
 nobase_dist_libucc_la_HEADERS = \
 	api/ucc.h                   \
 	api/ucc_def.h               \
 	api/ucc_version.h           \
-	api/ucc_status.h            
+	api/ucc_status.h
 
-libucc_la_SOURCES = core/ucc_lib.c 
+noinst_HEADERS =      \
+	team_lib/ucc_tl.h \
+	utils/ucc_log.h
+
+libucc_la_SOURCES =
+
+libucc_la_LIBADD = \
+	core/libucc_core.la
 
 libucc_ladir = $(includedir)
 
+install-exec-hook:
+	cp -f $(UCC_TOP_BUILDDIR)/src/libucc.la $(libdir)/
+	perl -pi -e "s/installed=no/installed=yes/" $(libdir)/libucc.la
 
