tl/basic: first stub for a TL component

--- a/configure.ac
+++ b/configure.ac
@@ -94,5 +94,8 @@ AC_CONFIG_FILES([
                  Makefile
                  src/Makefile
                  src/core/Makefile
+                 src/team_lib/Makefile
+                 src/team_lib/basic/Makefile
+                 test/Makefile
                  ])
 AC_OUTPUT
