ucc context create/destroy API

--- a/src/team_lib/basic/Makefile.am
+++ b/src/team_lib/basic/Makefile.am
@@ -9,7 +9,9 @@
 
 sources = \
 	ucc_tl_basic.h \
-	ucc_basic_lib.c
+	ucc_basic_lib.c \
+	ucc_basic_context.h \
+	ucc_basic_context.c
 
 component_noinst =
 component_install = ucc_team_lib_basic.la
