--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,8 +7,11 @@
 # $HEADER$
 #
 
-bin_PROGRAMS = test_lib_init
+bin_PROGRAMS = test_lib_init test_context_create
+
 test_lib_init_SOURCES = test_lib_init.c
+
+test_context_create_SOURCES = test_context_create.c
 
 CFLAGS+=-I${includedir}
 LDFLAGS=-L$(libdir) -lucc
