--- a/src/api/ucc_version.h.in
+++ b/src/api/ucc_version.h.in
@@ -13,6 +13,6 @@
 #define UCC_VERSION_MINOR_SHIFT    16
 
 
-#define UCC_API_MAJOR    1
-#define UCC_API_MINOR    0
-#define UCC_API_VERSION  UCC_VERSION(UCC_API_MAJOR, UCC_API_MINOR)
+#define UCC_API_MAJOR    @MAJOR_VERSION@
+#define UCC_API_MINOR    @MINOR_VERSION@
+#define UCC_API_VERSION  UCC_VERSION(@MAJOR_VERSION@, @MINOR_VERSION@)
