--- a/src/api/ucc_version.h.in
+++ b/src/api/ucc_version.h.in
@@ -12,7 +12,8 @@
 #define UCC_VERSION_MAJOR_SHIFT    24
 #define UCC_VERSION_MINOR_SHIFT    16
 
-
-#define UCC_API_MAJOR    @MAJOR_VERSION@
-#define UCC_API_MINOR    @MINOR_VERSION@
-#define UCC_API_VERSION  UCC_VERSION(@MAJOR_VERSION@, @MINOR_VERSION@)
+#define UCC_API_MAJOR      @MAJOR_VERSION@
+#define UCC_API_MINOR      @MINOR_VERSION@
+#define UCC_API_VERSION    UCC_VERSION(@MAJOR_VERSION@, @MINOR_VERSION@)
+#define UCC_VERSION_STRING "@VERSION@"
+#define UCC_GIT_REVISION   "@UCC_GIT_SHA@"
