CL/BASIC: initial implementation
    - cl basic lib_init/finalize
    - CL logging helpers

--- a/configure.ac
+++ b/configure.ac
@@ -137,15 +137,16 @@ if test $ucx_happy != "yes"; then
    AC_MSG_ERROR([UCX is not available])
 fi
 
-includes="-I${UCC_TOP_SRCDIR}/src"
+includes="-I${UCC_TOP_SRCDIR}/src -I${UCC_TOP_BUILDDIR}/src"
 CPPFLAGS="$UCS_CPPFLAGS $CPPFLAGS $includes -std=gnu11 -Wall -Werror"
 LDFLAGS="$LDFLAGS $UCS_LDFLAGS $UCS_LIBADD"
 
 AC_CONFIG_FILES([
                  Makefile
                  src/Makefile
-                 src/api/ucc_version.h
                  tools/info/Makefile
+                 src/cl/basic/Makefile
+                 src/api/ucc_version.h
                  src/core/ucc_version.c
                  ])
 AC_OUTPUT
