TEST: remove unnecessary code from gtest, for now
Signed-off-by: Alex Margolin <alex.margolin@huawei.com>

--- a/configure.ac
+++ b/configure.ac
@@ -143,7 +143,8 @@ if test $ucx_happy != "yes"; then
 fi
 
 includes="-I${UCC_TOP_SRCDIR}/src -I${UCC_TOP_BUILDDIR}/src"
-CPPFLAGS="$UCS_CPPFLAGS $CPPFLAGS $includes -std=gnu11 -Wall -Werror"
+CFLAGS="-std=gnu11"
+CPPFLAGS="$UCS_CPPFLAGS $CPPFLAGS $includes -Wall -Werror"
 LDFLAGS="$LDFLAGS $UCS_LDFLAGS $UCS_LIBADD"
 
 AC_CONFIG_FILES([
