CORE: context_config_read/release/modify/print
     - Also adds minimal context configuration for the CL basic
     - Also adds ucc_context_config_print into ucc.h for consistency
     - Also adds ucc_context_config_modify into ucc.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,7 @@ nobase_dist_libucc_la_HEADERS = \
 noinst_HEADERS =             \
 	core/ucc_global_opts.h   \
 	core/ucc_lib.h           \
+	core/ucc_context.h       \
 	utils/ucc_compiler_def.h \
 	utils/ucc_log.h          \
 	utils/ucc_parser.h       \
@@ -33,6 +34,7 @@ libucc_la_SOURCES =        \
 	core/ucc_constructor.c \
 	core/ucc_global_opts.c \
 	core/ucc_version.c     \
+	core/ucc_context.c     \
 	utils/ucc_component.c  \
 	cl/ucc_cl.c
 
