CORE: ucc_context_create/destroy
      - ucc_context_create/destroy implementation
      - cl context create/destroy iface callbacks
      - ucc_cl_context_t class
      - minimal ctx create/destroy implementation for cl_basic

--- a/configure.ac
+++ b/configure.ac
@@ -143,7 +143,7 @@ if test $ucx_happy != "yes"; then
 fi
 
 includes="-I${UCC_TOP_SRCDIR}/src -I${UCC_TOP_BUILDDIR}/src"
-CFLAGS="-std=gnu11"
+CFLAGS="$CFLAGS -std=gnu11"
 CPPFLAGS="$UCS_CPPFLAGS $CPPFLAGS $includes -Wall -Werror"
 LDFLAGS="$LDFLAGS $UCS_LDFLAGS $UCS_LIBADD"
 
