--- a/src/cl/basic/Makefile.am
+++ b/src/cl/basic/Makefile.am
@@ -2,9 +2,11 @@
 # Copyright (C) Mellanox Technologies Ltd. 2020.  ALL RIGHTS RESERVED.
 #
 
-sources =          \
-	cl_basic.h     \
-	cl_basic_lib.c
+sources =              \
+	cl_basic.h         \
+	cl_basic.c         \
+	cl_basic_lib.c     \
+	cl_basic_context.c
 
 module_LTLIBRARIES          = libucc_cl_basic.la
 libucc_cl_basic_la_SOURCES  = $(sources)
