--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -61,14 +61,15 @@ gtest_CXXFLAGS = \
 	$(BASE_CXXFLAGS) $(GTEST_CXXFLAGS) \
 	-DGTEST_UCM_HOOK_LIB_DIR="\"${abs_builddir}/ucm/test_dlopen/.libs\""
 
-gtest_SOURCES = \
-	common/gtest-all.cc \
+gtest_SOURCES =             \
+	common/gtest-all.cc     \
 	common/test_obj_size.cc \
-	common/main.cc \
-	common/test.cc \
-	\
-	tl/tl_test.cc \
-	core/test_lib_config.cc
+	common/main.cc          \
+	common/test.cc          \
+	                        \
+	tl/tl_test.cc           \
+	core/test_lib_config.cc \
+	core/test_lib.cc
 
 noinst_HEADERS = \
 	common/gtest.h \
