BUILD: modules location
    Also create a (top_builddir)/src/.libs/ucc link which points to
    the "modules". This is needed so that gtest linked directly
    against (top_buidldir)/src/.libs/libucc.la could find modules
    properly.

--- a/src/cl/basic/Makefile.am
+++ b/src/cl/basic/Makefile.am
@@ -6,8 +6,11 @@ sources =          \
 	cl_basic.h     \
 	cl_basic_lib.c
 
-libucc_cl_basic_la_SOURCES =$(sources)
+module_LTLIBRARIES          = libucc_cl_basic.la
+libucc_cl_basic_la_SOURCES  = $(sources)
 libucc_cl_basic_la_CPPFLAGS = $(AM_CPPFLAGS)
-libucc_cl_basic_la_LDFLAGS = -version-info $(SOVERSION) --as-needed
+libucc_cl_basic_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed
 
-pkglib_LTLIBRARIES = libucc_cl_basic.la
+
+
+include $(top_srcdir)/config/module.am
