API: fix include installation path
Signed-off-by: Alex Margolin <alex.margolin@huawei.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,4 +38,4 @@ libucc_la_SOURCES =        \
 	utils/ucc_component.c  \
 	cl/ucc_cl.c
 
-libucc_ladir = $(includedir)
+libucc_ladir = $(includedir)/ucc
