--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,11 +10,11 @@ libucc_la_CPPFLAGS = $(AM_CPPFLAGS)
 libucc_la_CFLAGS   = -c
 libucc_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed
 
-nobase_dist_libucc_la_HEADERS = \
-	api/ucc.h                   \
-	api/ucc_def.h               \
-	api/ucc_version.h           \
-	api/ucc_status.h
+nobase_dist_libucc_la_HEADERS = 	\
+	ucc/api/ucc.h                   \
+	ucc/api/ucc_def.h               \
+	ucc/api/ucc_version.h           \
+	ucc/api/ucc_status.h
 
 noinst_HEADERS =             \
 	core/ucc_global_opts.h   \
