BUILD: moves CL and TL to common "components" dir
    according to WG discussions, since TL and CL inherit from common
    "base" interface the code is moved to the common dir called "components"

--- a/configure.ac
+++ b/configure.ac
@@ -180,8 +180,8 @@ AC_CONFIG_FILES([
                  Makefile
                  src/Makefile
                  tools/info/Makefile
-                 src/cl/basic/Makefile
                  src/ucc/api/ucc_version.h
                  src/core/ucc_version.c
+                 src/components/cl/basic/Makefile
                  ])
 AC_OUTPUT
