--- a/src/components/cl/basic/Makefile.am
+++ b/src/components/cl/basic/Makefile.am
@@ -6,7 +6,8 @@ sources =              \
 	cl_basic.h         \
 	cl_basic.c         \
 	cl_basic_lib.c     \
-	cl_basic_context.c
+	cl_basic_context.c \
+	cl_basic_team.c
 
 module_LTLIBRARIES          = libucc_cl_basic.la
 libucc_cl_basic_la_SOURCES  = $(sources)
