--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -6,7 +6,8 @@ sources =            \
 	tl_ucp.h         \
 	tl_ucp.c         \
 	tl_ucp_lib.c     \
-	tl_ucp_context.c
+	tl_ucp_context.c \
+	tl_ucp_team.c
 
 module_LTLIBRARIES = libucc_tl_ucp.la
 libucc_tl_ucp_la_SOURCES  = $(sources)
