--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,14 +1,16 @@
 #
-# Copyright (C) Mellanox Technologies Ltd. 2020.  ALL RIGHTS RESERVED.
+# Copyright (C) Mellanox Technologies Ltd. 2020-2021.  ALL RIGHTS RESERVED.
 #
+
 cl_dirs = components/cl/basic
 tl_dirs =
+mc_dirs = components/mc/cpu
 
 if HAVE_UCX
 tl_dirs += components/tl/ucp
 endif
 
-SUBDIRS = $(cl_dirs) $(tl_dirs)
+SUBDIRS = $(cl_dirs) $(tl_dirs) $(mc_dirs)
 lib_LTLIBRARIES  = libucc.la
 noinst_LIBRARIES =
 
@@ -26,6 +28,7 @@ noinst_HEADERS =                     \
 	core/ucc_global_opts.h           \
 	core/ucc_lib.h                   \
 	core/ucc_context.h               \
+	core/ucc_mc.h                    \
 	utils/ucc_compiler_def.h         \
 	utils/ucc_log.h                  \
 	utils/ucc_parser.h               \
@@ -37,8 +40,9 @@ noinst_HEADERS =                     \
 	components/cl/ucc_cl_log.h       \
 	components/cl/ucc_cl_type.h      \
 	components/tl/ucc_tl.h           \
-	components/tl/ucc_tl_log.h
-
+	components/tl/ucc_tl_log.h       \
+	components/mc/base/ucc_mc_base.h \
+	components/mc/ucc_mc_log.h
 
 libucc_la_SOURCES =                  \
 	core/ucc_lib.c                   \
@@ -46,9 +50,11 @@ libucc_la_SOURCES =                  \
 	core/ucc_global_opts.c           \
 	core/ucc_version.c               \
 	core/ucc_context.c               \
+	core/ucc_mc.c                    \
 	utils/ucc_component.c            \
 	components/base/ucc_base_iface.c \
 	components/cl/ucc_cl.c           \
-	components/tl/ucc_tl.c
+	components/tl/ucc_tl.c           \
+	components/mc/base/ucc_mc_base.c
 
 libucc_ladir = $(includedir)
