--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -2,6 +2,11 @@
 # Copyright (C) Mellanox Technologies Ltd. 2020.  ALL RIGHTS RESERVED.
 #
 
+barrier =                     \
+	barrier/barrier.h         \
+	barrier/barrier.c         \
+	barrier/barrier_knomial.c
+
 sources =            \
 	tl_ucp.h         \
 	tl_ucp.c         \
@@ -13,6 +18,7 @@ sources =            \
 	tl_ucp_addr.h    \
 	tl_ucp_addr.c    \
 	tl_ucp_coll.c
+	$(barrier)
 
 module_LTLIBRARIES = libucc_tl_ucp.la
 libucc_tl_ucp_la_SOURCES  = $(sources)
