--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,6 +10,10 @@ if HAVE_UCX
 tl_dirs += components/tl/ucp
 endif
 
+if HAVE_CUDA
+mc_dirs += components/mc/cuda
+endif
+
 SUBDIRS = $(cl_dirs) $(tl_dirs) $(mc_dirs)
 lib_LTLIBRARIES  = libucc.la
 noinst_LIBRARIES =
