TL/UCP: recursive kn barrier

--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -17,7 +17,7 @@ sources =            \
 	tl_ucp_ep.c      \
 	tl_ucp_addr.h    \
 	tl_ucp_addr.c    \
-	tl_ucp_coll.c
+	tl_ucp_coll.c    \
 	$(barrier)
 
 module_LTLIBRARIES = libucc_tl_ucp.la
