--- a/configure.ac
+++ b/configure.ac
@@ -192,6 +192,7 @@ AC_CONFIG_FILES([
                  src/components/tl/ucp/Makefile
                  src/components/mc/cpu/Makefile
                  src/components/mc/cuda/Makefile
+                 src/components/mc/cuda/kernel/Makefile
                  test/mpi/Makefile
                  ])
 AC_OUTPUT
