--- a/src/components/mc/cuda/Makefile.am
+++ b/src/components/mc/cuda/Makefile.am
@@ -3,6 +3,8 @@
 #
 
 if HAVE_CUDA
+SUBDIRS = kernel
+
 sources =    \
 	mc_cuda.h \
 	mc_cuda.c
@@ -11,7 +13,7 @@ module_LTLIBRARIES         = libucc_mc_cuda.la
 libucc_mc_cuda_la_SOURCES  = $(sources)
 libucc_mc_cuda_la_CPPFLAGS = $(AM_CPPFLAGS) $(CUDA_CPPFLAGS)
 libucc_mc_cuda_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed $(CUDA_LDFLAGS)
-libucc_mc_cuda_la_LIBADD   = $(CUDA_LIBS)
+libucc_mc_cuda_la_LIBADD   = $(CUDA_LIBS) kernel/libucc_mc_cuda_kernels.la
 
 include $(top_srcdir)/config/module.am
 endif
