--- a/src/components/mc/cpu/Makefile.am
+++ b/src/components/mc/cpu/Makefile.am
@@ -11,5 +11,6 @@ module_LTLIBRARIES        = libucc_mc_cpu.la
 libucc_mc_cpu_la_SOURCES  = $(sources)
 libucc_mc_cpu_la_CPPFLAGS = $(AM_CPPFLAGS)
 libucc_mc_cpu_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed
+libucc_mc_cpu_la_LIBADD   = $(UCC_TOP_BUILDDIR)/src/libucc.la
 
 include $(top_srcdir)/config/module.am
