TEST: new test MPI

--- a/configure.ac
+++ b/configure.ac
@@ -157,10 +157,12 @@ AS_IF([test "x$with_docs_only" = xyes],
      if test $enable_debug = yes; then
         AC_DEFINE([ENABLE_DEBUG], [1], [Enable debugging code])
         CFLAGS="$CFLAGS -O0 -g3"
+        CXXFLAGS="$CXXFLAGS -O0 -g3"
         AC_DEFINE([UCS_MAX_LOG_LEVEL], [UCS_LOG_LEVEL_TRACE_POLL], [Highest log level])
      else
         AC_DEFINE([UCS_MAX_LOG_LEVEL], [UCS_LOG_LEVEL_INFO], [Highest log level])
         CFLAGS="$CFLAGS -O3 -DNDEBUG"
+        CXXFLAGS="$CXXFLAGS -O3 -DNDEBUG"
      fi
 
      CHECK_UCX
