TEST: test mpi bcast

--- a/test/mpi/Makefile.am
+++ b/test/mpi/Makefile.am
@@ -18,7 +18,8 @@ ucc_test_mpi_SOURCES = \
 	test_barrier.cc    \
 	test_allreduce.cc  \
 	test_allgather.cc  \
-	test_allgatherv.cc
+	test_allgatherv.cc \
+	test_bcast.cc
 
 CXX=mpicxx
 CXXFLAGS+=-I${top_builddir}/src -std=gnu++11
