TL/UCP: alltoall fixes
1. use ucc_rank_t datatype
2. ucc_dt_size implemented with array instead of switch

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -65,6 +65,7 @@ libucc_la_SOURCES =                  \
 	schedule/ucc_schedule.c          \
 	utils/ucc_component.c            \
 	utils/ucc_status.c               \
+    utils/ucc_math.c                 \
 	components/base/ucc_base_iface.c \
 	components/cl/ucc_cl.c           \
 	components/tl/ucc_tl.c           \
