--- a/src/components/tl/nccl/Makefile.am
+++ b/src/components/tl/nccl/Makefile.am
@@ -13,8 +13,8 @@ sources =             \
 
 module_LTLIBRARIES = libucc_tl_nccl.la
 libucc_tl_nccl_la_SOURCES  = $(sources)
-libucc_tl_nccl_la_CPPFLAGS = $(AM_CPPFLAGS) $(NCCL_CPPFLAGS)
-libucc_tl_nccl_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed $(NCCL_LDFLAGS)
-libucc_tl_nccl_la_LIBADD   = $(NCCL_LIBADD) $(UCC_TOP_BUILDDIR)/src/libucc.la
+libucc_tl_nccl_la_CPPFLAGS = $(AM_CPPFLAGS) $(CUDA_CPPFLAGS) $(NCCL_CPPFLAGS)
+libucc_tl_nccl_la_LDFLAGS  = -version-info $(SOVERSION) --as-needed $(CUDA_LDFLAGS) $(NCCL_LDFLAGS)
+libucc_tl_nccl_la_LIBADD   = $(CUDA_LIBS) $(NCCL_LIBADD) $(UCC_TOP_BUILDDIR)/src/libucc.la
 
 include $(top_srcdir)/config/module.am
