--- a/.github/workflows/codestyle.yaml
+++ b/.github/workflows/codestyle.yaml
@@ -6,14 +6,16 @@ env:
   GIT_CF: https://raw.githubusercontent.com/llvm/llvm-project/release/11.x/clang/tools/clang-format/git-clang-format
 jobs:
   check-codestyle:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     name: Check code style
     steps:
     - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y --no-install-recommends wget lsb-core software-properties-common
-        sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
+        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key| sudo apt-key add -
+        sudo apt-add-repository 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-11 main'
+        sudo apt-get install -y --no-install-recommends clang-format-11
         curl -OL $GIT_CF && chmod +x ./git-clang-format && sudo mv ./git-clang-format /usr/bin/git-clang-format
     - name: Checking out repository
       uses: actions/checkout@v2
@@ -67,7 +69,7 @@ jobs:
       run: |
         set -eE
         echo "Commit ${{ github.event.pull_request.base.sha }}"
-        diff=`git clang-format --style=file --diff ${{ github.event.pull_request.base.sha }}`
+        diff=`git clang-format --binary=clang-format-11 --style=file --diff ${{ github.event.pull_request.base.sha }}`
         if [ "$diff" = "no modified files to format" ] || [ "$diff" = "clang-format did not modify any files" ]
         then
           echo "Format check PASS"
