--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -51,6 +51,7 @@ noinst_HEADERS =                     \
 	utils/ucc_queue.h				 \
 	utils/ucc_proc_info.h            \
 	utils/khash.h                    \
+	utils/ucc_spinlock.h             \
 	components/base/ucc_base_iface.h \
 	components/cl/ucc_cl.h           \
 	components/cl/ucc_cl_log.h       \
