MC/CUDA: stream task kernel

--- a/src/components/mc/cuda/kernel/Makefile.am
+++ b/src/components/mc/cuda/kernel/Makefile.am
@@ -16,7 +16,8 @@ LINK = $(LIBTOOL) --mode=link $(CC) -o $@
 comp_noinst = libucc_mc_cuda_kernels.la
 
 libucc_mc_cuda_kernels_la_SOURCES  = mc_cuda_reduce.cu \
-                                     mc_cuda_reduce_multi.cu
+                                     mc_cuda_reduce_multi.cu \
+                                     mc_cuda_wait_kernel.cu
 libucc_mc_cuda_kernels_la_CPPFLAGS =
 
 noinst_LTLIBRARIES = $(comp_noinst)
